--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,6 +83,7 @@ main {
   line-height: 23px;
   outline: none;
   padding: 0.75rem;
+  margin: 0rem 3rem;
   text-decoration: none;
   transition: all 235ms ease-in-out;
   border-bottom-left-radius: 15px 255px;
@@ -122,7 +123,7 @@ main {
 }
 .main .btn {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 }
 .main .card {
   margin-top: 2rem;
